src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Dia_Inhabil__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check para determinar si es un día inhabil en el conteo de días</description>
        <label>Día Inhábil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Fórmula que obtiene la división del propietario de la actividad.</description>
        <formula>TEXT(  Owner:User.Divisi_n__c  )</formula>
        <label>División Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Envio_de_minuta_al_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que identificara si se enviara una minuta al cliente con respecto a la visita que realizo el ejecutivo.</description>
        <label>Minuta Enviada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estatus_sincronizacion__c</fullName>
        <label>Estatus sincronización</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insertar</fullName>
                </value>
                <value>
                    <fullName>Actualizar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etag_Google__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Etag Google</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Hora_de_Re_Agendamiento__c</fullName>
        <description>Campo para guardar fecha y hora del reagendamiento ejecutado</description>
        <label>Fecha de Re-Agendamiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaHoraReagenda__c</fullName>
        <description>Permite conocer la hora de reagendamiento</description>
        <label>Fecha Hora Reagenda</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gestor__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hora__c</fullName>
        <label>Hora</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:30 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>13:00 PM</fullName>
                </value>
                <value>
                    <fullName>13:30 PM</fullName>
                </value>
                <value>
                    <fullName>14:00 PM</fullName>
                </value>
                <value>
                    <fullName>14:30 PM</fullName>
                </value>
                <value>
                    <fullName>15:00 PM</fullName>
                </value>
                <value>
                    <fullName>15:30 PM</fullName>
                </value>
                <value>
                    <fullName>16:00 PM</fullName>
                </value>
                <value>
                    <fullName>16:30 PM</fullName>
                </value>
                <value>
                    <fullName>17:00 PM</fullName>
                </value>
                <value>
                    <fullName>17:30 PM</fullName>
                </value>
                <value>
                    <fullName>18:00 PM</fullName>
                </value>
                <value>
                    <fullName>18:30 PM</fullName>
                </value>
                <value>
                    <fullName>19:00 PM</fullName>
                </value>
                <value>
                    <fullName>19:30 PM</fullName>
                </value>
                <value>
                    <fullName>20:00 PM</fullName>
                </value>
                <value>
                    <fullName>08 AM</fullName>
                    <isActive>false</isActive>
                    <label>08 AM</label>
                </value>
                <value>
                    <fullName>09 AM</fullName>
                    <isActive>false</isActive>
                    <label>09 AM</label>
                </value>
                <value>
                    <fullName>10 AM</fullName>
                    <isActive>false</isActive>
                    <label>10 AM</label>
                </value>
                <value>
                    <fullName>11 AM</fullName>
                    <isActive>false</isActive>
                    <label>11 AM</label>
                </value>
                <value>
                    <fullName>12 AM</fullName>
                    <isActive>false</isActive>
                    <label>12 AM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_externo_Google__c</fullName>
        <description>Id del registro en la plataforma de Google.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Id externo Google</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_EU_Actividad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compromiso Actividad/Cierre</description>
        <inlineHelpText>Seleccionado: Actividad,No seleccionado: Cierre</inlineHelpText>
        <label>Actividad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_AgregarAMinuta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para saber si el acuerdo se agregara a la minuta.</description>
        <label>Agregar a la minuta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_BanderaFecha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bandera para identificar el cambio de fecha.</description>
        <label>Bandera Fecha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_EU_ComentariosDO__c</fullName>
        <description>Comentarios del DO sobre el compromiso</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comentarios del director, relacionados con el compromiso</inlineHelpText>
        <label>Comentarios DO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_LookActivity__c</fullName>
        <description>Indica la llamada a la que se aplico la objeción</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LLamada Activa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_EU_ComentariosEC__c</fullName>
        <description>Comentarios del ejecutivo</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comentarios del ejecutivo relacionados al compromiso</inlineHelpText>
        <label>Comentarios EC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_EU_Compromiso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Compromiso Relacionado</description>
        <label>Compromiso</label>
        <referenceTo>EU_001_Compromiso__c</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_TipificacionNivel6__c</fullName>
        <description>Resultado final del árbol de tipificación para el flujo de venta Telemarketing</description>
        <label>Tipificación CTI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MX_SB_VTS_TipificacionNivel6</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_EU_FechaCierre__c</fullName>
        <description>Fecha cierre del compromiso EU</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_EU_HistoricoFC__c</fullName>
        <description>Almacena el historico de los cambios de la fecha de cierre del compromiso.</description>
        <label>Historico Fecha Cierre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_EU_Indicador__c</fullName>
        <description>Listado indicadores de cartera para experiencia única</description>
        <label>Tipo Compromiso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cartera Vigente CP</fullName>
                </value>
                <value>
                    <fullName>Cartera Vigente LP</fullName>
                </value>
                <value>
                    <fullName>Cartera Vigente</fullName>
                </value>
                <value>
                    <fullName>Vista MN</fullName>
                </value>
                <value>
                    <fullName>Inversiones</fullName>
                </value>
                <value>
                    <fullName>Resto Captación</fullName>
                </value>
                <value>
                    <fullName>INF Recurrentes</fullName>
                </value>
                <value>
                    <fullName>Stock Nomina</fullName>
                </value>
                <value>
                    <fullName>Usuarios nuevos crédito</fullName>
                </value>
                <value>
                    <fullName>Saneamiento</fullName>
                </value>
                <value>
                    <fullName>Usuario Nvo de Credito</fullName>
                </value>
                <value>
                    <fullName>INF No Recurrentes</fullName>
                </value>
                <value>
                    <fullName>Margen Bruto</fullName>
                </value>
                <value>
                    <fullName>Análisis de crédito</fullName>
                </value>
                <value>
                    <fullName>IReNe</fullName>
                </value>
                <value>
                    <fullName>Plan de Cuenta</fullName>
                </value>
                <value>
                    <fullName>Visitas</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Captación</fullName>
                </value>
                <value>
                    <fullName>Colocación</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_EU_MontoCompromiso__c</fullName>
        <description>Monto en pesos para el compromiso de Experiencia única</description>
        <inlineHelpText>Pesos</inlineHelpText>
        <label>Monto Compromiso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_EU_NivelPriorizacion__c</fullName>
        <label>Nivel Priorización</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_EU_Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_EU_Priorizado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bandera de priorización de compromiso</description>
        <label>Priorizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_RI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reunión Individual Relacionada</description>
        <label>Reunión Individual</label>
        <referenceTo>EU001_RI__c</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_EU_TextoCompromiso__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compromiso</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_Certificada__c</fullName>
        <description>Estipula si la llamada fue o no certificada.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Certifica la llamada.</inlineHelpText>
        <label>Llamada Certificada</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Grabacion_no_Certificada__c</fullName>
		<description>ID de llamada no certificada.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>No. Grabacion no Certificada</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipificacion_no_Contacto__c</fullName>
		<description>Estipula el motivo de no contacto.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipificacio no Contacto</label>
        <length>100</length>
        <type>Text</type>
    </fields>	
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abierta</fullName>
                </value>
                <value>
                    <fullName>Cerrada</fullName>
                </value>
                <value>
                    <fullName>Venta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivos_CONTACTO__c</fullName>
        <label>Motivos de no contacto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No contesta</fullName>
                </value>
                <value>
                    <fullName>Tel. Equivocado</fullName>
                </value>
                <value>
                    <fullName>Tel. inexistente</fullName>
                </value>
                <value>
                    <fullName>Tel. ocupado</fullName>
                </value>
                <value>
                    <fullName>Tel. suspendido</fullName>
                </value>
                <value>
                    <fullName>Contestadora</fullName>
                </value>
                <value>
                    <fullName>Línea ocupada</fullName>
                </value>
                <value>
                    <fullName>Mala calidad de audio</fullName>
                </value>
                <value>
                    <fullName>Teléfono suspendido</fullName>
                </value>
                <value>
                    <fullName>Teléfono no existe</fullName>
                </value>
                <value>
                    <fullName>Fuera del área de servicio</fullName>
                </value>
                <value>
                    <fullName>Fuera de servicio (Fijo)</fullName>
                </value>
                <value>
                    <fullName>Buzón de voz</fullName>
                </value>
                <value>
                    <fullName>Se corta llamada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivos_de_no_venta__c</fullName>
        <label>Motivos de si/no venta</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Motivo__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agenda generada</fullName>
                </value>
                <value>
                    <fullName>Aun cuenta con seguro (comparando)</fullName>
                </value>
                <value>
                    <fullName>Aún no compra la unidad</fullName>
                </value>
                <value>
                    <fullName>Auto antiguo</fullName>
                </value>
                <value>
                    <fullName>Autofinanciamiento</fullName>
                </value>
                <value>
                    <fullName>Auto fuera de base</fullName>
                </value>
                <value>
                    <fullName>Coberturas  insuficientes</fullName>
                </value>
                <value>
                    <fullName>Fronterizo / legalizado</fullName>
                </value>
                <value>
                    <fullName>Mayor a 3.5 toneladas</fullName>
                </value>
                <value>
                    <fullName>Motivo no identificado</fullName>
                </value>
                <value>
                    <fullName>Motivo uso comercial</fullName>
                </value>
                <value>
                    <fullName>No tiene auto</fullName>
                </value>
                <value>
                    <fullName>Precio alto</fullName>
                </value>
                <value>
                    <fullName>Salvamento / Siniestrado</fullName>
                </value>
                <value>
                    <fullName>Sin medio de pago</fullName>
                </value>
                <value>
                    <fullName>Uso de taxi</fullName>
                </value>
                <value>
                    <fullName>Venta Realizada</fullName>
                </value>
                <value>
                    <fullName>Pre emisión</fullName>
                </value>
                <value>
                    <fullName>Ya cuenta con seguro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivos_efectivo__c</fullName>
        <label>Motivos de no efectivo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No se encuentra</fullName>
                </value>
                <value>
                    <fullName>De viaje</fullName>
                </value>
                <value>
                    <fullName>Se encuentra ocupado</fullName>
                </value>
                <value>
                    <fullName>Contestadora automática</fullName>
                </value>
                <value>
                    <fullName>Mensaje dejado</fullName>
                </value>
		 <value>
                    <fullName>Interesado</fullName>
                </value>
		<value>
                    <fullName>No Aplica</fullName>
                </value>
		<value>
                    <fullName>No Interesado</fullName>
                </value>
		<value>
                    <fullName>No Interesado (CNE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CF_ActividadesKPI__c</fullName>
        <description>Campo de lista de selección múltiple dependiente del campo KPI&apos;S, de acuerdo con la selección del valor de KPI son los valores que se muestra en Actividades KPI</description>
        <label>Actividades KPI</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>MX_CF_KPI__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acompañar</fullName>
                </value>
                <value>
                    <fullName>Agencias sin visita</fullName>
                </value>
                <value>
                    <fullName>Arrendamiento Puro</fullName>
                </value>
                <value>
                    <fullName>Capilaridad</fullName>
                </value>
                <value>
                    <fullName>Construir credibilidad Maximizar los resultados del cliente</fullName>
                </value>
                <value>
                    <fullName>Enfoque al Cliente</fullName>
                </value>
                <value>
                    <fullName>Entender al Cliente</fullName>
                </value>
                <value>
                    <fullName>Entender la Industria</fullName>
                </value>
                <value>
                    <fullName>Entender mi Negocio</fullName>
                </value>
                <value>
                    <fullName>KPI para acuerdo</fullName>
                </value>
                <value>
                    <fullName>Nuevos</fullName>
                </value>
                <value>
                    <fullName>Oportunidades</fullName>
                </value>
                <value>
                    <fullName>Personas Morales</fullName>
                </value>
                <value>
                    <fullName>Planea una agenda útil</fullName>
                </value>
                <value>
                    <fullName>Planea una interacción de valor</fullName>
                </value>
                <value>
                    <fullName>Planea un camino</fullName>
                </value>
                <value>
                    <fullName>Productividad Inplants</fullName>
                </value>
                <value>
                    <fullName>Seguros Bancomer</fullName>
                </value>
                <value>
                    <fullName>Seminuevos</fullName>
                </value>
                <value>
                    <fullName>Se parte del Cliente</fullName>
                </value>
                <value>
                    <fullName>Share</fullName>
                </value>
                <value>
                    <fullName>Un solo Bancomer</fullName>
                </value>
                <value>
                    <fullName>Visitas</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CF_KPI__c</fullName>
        <description>Campo de lista de selección de KPI&apos;s para tipo de visita Reunión Individual</description>
        <label>KPI&apos;S</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KPI Experiencia Unica</fullName>
                </value>
                <value>
                    <fullName>KPI Gerente Triunfador</fullName>
                </value>
                <value>
                    <fullName>KPI Gestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_EU_Responsable__c</fullName>
        <description>Campo para seleccionar al responsable del acuerdo creado</description>
        <label>Responsable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BBVA Bancomer</fullName>
                    <default>true</default>
                    <label>BBVA Bancomer</label>
                </value>
                <value>
                    <fullName>Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_EU_TipoOperacion__c</fullName>
        <description>Lista de seleccion para tipo de operación experiencia única</description>
        <label>Tipo de operación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Línea existente</fullName>
                </value>
                <value>
                    <fullName>Nueva operación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>campo que se llenara al crear una actividad (tarea)</description>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Intento de llamadas</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_TareaCreada__c</fullName>
        <defaultValue>true</defaultValue>
        <description>se ocupara la sumarisar las tareas totales</description>
        <label>Tarea Creada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WB_duracionLlamada__c</fullName>
        <description>Almacena la duración de la llamada que se realizó en CTI</description>
        <label>Duración de la llamada TLMKT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WB_EstatusCTI__c</fullName>
        <description>Estatus que devuelve CTI después de la atención de un lead.</description>
        <label>Estatus CTI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AÚN NO COMPRA LA UNIDAD</fullName>
                </value>
                <value>
                    <fullName>AUTO NO EN LA BASE</fullName>
                </value>
                <value>
                    <fullName>AUTO USO COMERCIAL</fullName>
                </value>
                <value>
                    <fullName>AUTOFINANCIAMIENTO</fullName>
                </value>
                <value>
                    <fullName>AUTOSINIESTRADO</fullName>
                </value>
                <value>
                    <fullName>CLIENTE CUELGA</fullName>
                </value>
                <value>
                    <fullName>CLIENTE INTERESADO</fullName>
                </value>
                <value>
                    <fullName>DESCONFIANZA DEL PRODUCTO</fullName>
                </value>
                <value>
                    <fullName>EMPRESA SIN EXTENSIÓN</fullName>
                </value>
                <value>
                    <fullName>EQUIVOCADO INCORRECTO</fullName>
                </value>
                <value>
                    <fullName>ESTA COMPARANDO COTIZACIÓN</fullName>
                </value>
                <value>
                    <fullName>FINADO</fullName>
                </value>
                <value>
                    <fullName>FUERA DE SERVICIO</fullName>
                </value>
                <value>
                    <fullName>FUERA DEL ÁREA DE SERVICIO</fullName>
                </value>
                <value>
                    <fullName>GRABADORA CONTESTADORA</fullName>
                </value>
                <value>
                    <fullName>INFORMACIÓN SOBRE PÓLIZA</fullName>
                </value>
                <value>
                    <fullName>MALA EXPERIENCIA CON SEGUROS</fullName>
                </value>
                <value>
                    <fullName>MODELO</fullName>
                </value>
                <value>
                    <fullName>MUY CARO PRECIO ALTO</fullName>
                </value>
                <value>
                    <fullName>NO CONTESTA</fullName>
                </value>
                <value>
                    <fullName>NO LE INTERESA</fullName>
                </value>
                <value>
                    <fullName>NO SE ENCUENTRA</fullName>
                </value>
                <value>
                    <fullName>NO TIENE TIEMPO</fullName>
                </value>
                <value>
                    <fullName>NO VIVE AHÍ</fullName>
                </value>
                <value>
                    <fullName>NO VOLVER A LLAMAR</fullName>
                </value>
                <value>
                    <fullName>OCUPADO</fullName>
                </value>
                <value>
                    <fullName>PRUEBA</fullName>
                </value>
                <value>
                    <fullName>SIN MEDIO DE PAGO</fullName>
                </value>
                <value>
                    <fullName>SUCURSAL BBVA</fullName>
                </value>
                <value>
                    <fullName>SUSPENDIDO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_fechaGrabacionLlamada__c</fullName>
        <description>Fecha de grabación CTI de llamada con cliente.</description>
        <label>Fecha grabación llamada</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_WB_fechaUltimoContacto__c</fullName>
        <description>Contiene la fecha de último contacto desde CTI.</description>
        <label>Fecha de último contacto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_WB_idGrabacion__c</fullName>
        <description>Id de la grabación de llamada.</description>
        <label>Grabación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_RFCusuarioAtencion__c</fullName>
        <description>rfc del asesor que atendió la llamada.</description>
        <label>RFC usuario atención</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_telefonoUltimoContactoCTI__c</fullName>
        <description>Almacena el teléfono de contacto que retorna CTI como marcado.</description>
        <label>Último teléfono de contacto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_de_nomina__c</fullName>
        <formula>Owner:User.No_de_nomina__c</formula>
        <label>No. de nómina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina__c</fullName>
        <formula>TEXT( Owner:User.Oficina__c )</formula>
        <label>Oficina Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origen__c</fullName>
        <label>Origen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                    <fullName>Campañas MKT Inbound</fullName>
                </value>
                <value>
                    <fullName>Call me back</fullName>
                </value>
                <value>
                    <fullName>Webtracking</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>Referidos</fullName>
                </value>
                <value>
                    <fullName>Derivados</fullName>
                </value>
                <value>
                    <fullName>Wiberizate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planeaci_n_de_visita__c</fullName>
        <description>Lista de seleccón para indicar si la visita fue planeada o no.</description>
        <label>Planeación de visita</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visita planeada</fullName>
                </value>
                <value>
                    <fullName>Visita no planeada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plataforma_origen__c</fullName>
        <description>Determina de que plataforma proviene el registro. Si el campo contiene el valor &quot;Salesforce.com&quot; el registro se creó directamente en la plataforma de Salesforce.com, si el campo contiene el valor &quot;Google&quot; el registro fue creado inicialmente en la plataforma de Google y mediante la aplicación de sincronización el registro fue creado en Salesforce.com.</description>
        <label>Plataforma origen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com</fullName>
                    <default>true</default>
                    <label>Salesforce.com</label>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>